--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "keywords": [
     "vpershe",
-    "social education platform"
+    "social education platform",
+    "sex"
   ],
   "license": "MIT",
   "scripts": {
@@ -24,6 +25,7 @@
     "classnames": "^2.2.6",
     "fetch": "^1.1.0",
     "gatsby": "^2.2.8",
+    "gatsby-cli": "^2.5.5",
     "gatsby-paginate": "^1.0.17",
     "gatsby-plugin-google-tagmanager": "^2.0.10",
     "gatsby-plugin-layout": "^1.0.13",
